2002-01-27  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-widget.c (sheet_widget_scrollbar_read_xml) : simple
	  fix for reading scrollbars.  A better fix is in HEAD.

2002-01-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/cell.h (cell_get_render_color) : new
	* src/rendered-value.c (cell_get_render_color) : new

2002-01-24  Jody Goldberg <jody@gnome.org>

	* src/number-match.c (format_create_regexp) : We already escape the
	  thousands sep and decimal point.  Don't double escape them.

2002-01-23  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-widget.c (sheet_widget_scrollbar_set_sheet) : don't
	  eval.  We've already set the value.

2002-01-23  Jody Goldberg <jody@gnome.org>

	* configure.in : restore the missing lines.
	Add omf-install/Makefile

2002-01-22  Jody Goldberg <jody@gnome.org>

	* src/sheet-autofill.c (autofill_create_fill_items) : Use
	  list_prepend, and reverse in palce of append.

2001-01-22  Kevin Breit <mrproper@ximian.com>

	* Makefile.am: Added omf-install/
	* omf-install: Added directory for OMF stuff
	* omf-install/Makefile.am: Copied that in
	
2002-01-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* README:
	* configure.in: increased minimum libgda versions

2002-01-22  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump.

2002-01-21  Jody Goldberg <jody@gnome.org>

	* Release 1.0.3

2002-01-21  Jody Goldberg <jody@gnome.org>

	* src/item-acetate.c : trivial new object to provide a rectangle with
	  clear interiors that still collects events.

	* src/sheet-control-gui.c (set_item_x_y) : optionally hide a point.
	(scg_object_update_bbox) : hide middle control points when the bounds
	  are too close together.
	(set_acetate_coords) : use new simpler item-acetate, and provide a
	  cute stipple to make things clearer.

	* src/application.c (application_init) : Add scrollbar.

	* src/sheet-object-widget.c : Add scrollbars.
	(sheet_widget_checkbox_user_config) : Use gnumeric_table_attach_with_label.